<resources>
    <string name="scut_deleted_pc">PC deleted</string>
    <string name="scut_not_paired">PC not paired</string>
    <string name="scut_pc_not_found">PC not found</string>
    <string name="scut_invalid_uuid">Provided PC is not valid</string>
    <string name="scut_invalid_app_id">Provided App is not valid</string>
    <string name="help_loading_title">Help Viewer</string>
    <string name="help_loading_msg">Loading help page…</string>
    <string name="pcview_menu_header_online">Online</string>
    <string name="pcview_menu_header_offline">Offline</string>
    <string name="pcview_menu_header_unknown">Refreshing</string>
    <string name="pcview_menu_app_list">View All Apps</string>
    <string name="pcview_menu_pair_pc">Pair with PC</string>
    <string name="pcview_menu_unpair_pc">Unpair</string>
    <string name="pcview_menu_send_wol">Send Wake-On-LAN request</string>
    <string name="pcview_menu_delete_pc">Delete PC</string>
    <string name="pcview_menu_test_network">Test Network Connection</string>
    <string name="pcview_menu_details">View Details</string>
    <string name="pcview_menu_eol">NVIDIA GameStream End-of-Service</string>
    <string name="nettest_title_waiting">Testing Network Connection</string>
    <string name="nettest_text_waiting">Moonlight is testing your network connection to determine if any required ports are blocked.\n\nThis may take a few seconds…</string>
    <string name="nettest_title_done">Network Test Complete</string>
    <string name="nettest_text_success">Your network does not appear to be blocking Moonlight. If you still have trouble connecting, check your PC\'s firewall settings.\n\nIf you are trying to stream over the Internet, install the Moonlight Internet Hosting Tool on your PC and run the included Internet Streaming Tester to check your PC\'s Internet connection.</string>
    <string name="nettest_text_inconclusive">The network test could not be performed because none of Moonlight\'s connection testing servers were reachable. Check your Internet connection or try again later.</string>
    <string name="nettest_text_failure">Your device\'s current network connection seems to be blocking Moonlight. Streaming over the Internet may not work while connected to this network.\n\nThe following network ports were blocked:\n</string>
    <string name="nettest_text_blocked">Your device\'s current network connection is blocking Moonlight. Streaming over the Internet may not work while connected to this network.</string>
    <string name="pairing">Pairing…</string>
    <string name="pair_pc_offline">Computer is offline</string>
    <string name="pair_pc_ingame">Computer is currently in a game. You must close the game before pairing.</string>
    <string name="pair_pairing_title">Pairing</string>
    <string name="pair_pairing_msg">Please enter the following PIN on the target PC:</string>
    <string name="pair_pairing_help">If your host PC is running Sunshine, navigate to the Sunshine web UI to enter the PIN.</string>
    <string name="pair_incorrect_pin">Incorrect PIN</string>
    <string name="pair_fail">Pairing failed</string>
    <string name="pair_already_in_progress">Pairing already in progress</string>
    <string name="wol_pc_online">Computer is online</string>
    <string name="wol_no_mac">Unable to wake PC because there is no stored MAC address</string>
    <string name="wol_waking_pc">Waking PC…</string>
    <string name="wol_waking_msg">It may take a few seconds for your PC to wake up.
	    If it doesn\'t, make sure it\'s configured properly for Wake-On-LAN.
    </string>
    <string name="wol_fail">Failed to send Wake-On-LAN packets</string>
    <string name="unpairing">Unpairing…</string>
    <string name="unpair_success">Unpaired successfully</string>
    <string name="unpair_fail">Failed to unpair</string>
    <string name="unpair_error">Device was not paired</string>
    <string name="error_pc_offline">Computer is offline</string>
    <string name="error_manager_not_running">The ComputerManager service is not running. Please wait a few seconds or restart the app.</string>
    <string name="error_unknown_host">Failed to resolve host</string>
    <string name="error_404">GFE returned an HTTP 404 error. Make sure your PC is running a supported GPU.
	    Using remote desktop software can also cause this error. Try rebooting your machine or reinstalling GFE.
    </string>
    <string name="title_decoding_error">Video Decoder Crashed</string>
    <string name="message_decoding_error">Moonlight has crashed due to an incompatibility with this device\'s video decoder. Try adjusting the streaming settings if the crashes continue.</string>
    <string name="title_decoding_reset">Video Settings Reset</string>
    <string name="message_decoding_reset">Your device\'s video decoder continues to crash at your selected streaming settings. Your streaming settings have been reset to default.</string>
    <string name="error_usb_prohibited">USB access is prohibited by your device administrator. Check your Knox or MDM settings.</string>
    <string name="unable_to_pin_shortcut">Your current launcher does not allow for creating pinned shortcuts.</string>
    <string name="video_decoder_init_failed">Video decoder failed to initialize. Your device may not support the selected resolution or frame rate.</string>
    <string name="no_video_received_error">No video received from host.</string>
    <string name="no_frame_received_error">Your network connection isn\'t performing well. Reduce your video bitrate setting or try a faster connection.</string>
    <string name="early_termination_error">Something went wrong on your host PC when starting the stream.\n\nMake sure you don\'t have any DRM-protected content open on your host PC. You can also try restarting your host PC.</string>
    <string name="frame_conversion_error">The host PC reported a fatal video encoding error.\n\nTry disabling HDR mode, changing the streaming resolution, or changing your host PC\'s display resolution.</string>
    <string name="check_ports_msg">Check your firewall and port forwarding rules for port(s):</string>
    <string name="conn_establishing_title">Establishing Connection</string>
    <string name="conn_establishing_msg">Starting connection</string>
    <string name="conn_metered">Warning: Your active network connection is metered!</string>
    <string name="conn_client_latency">Average frame decoding latency:</string>
    <string name="conn_client_latency_hw">hardware decoder latency:</string>
    <string name="conn_hardware_latency">Average hardware decoding latency:</string>
    <string name="conn_starting">Starting</string>
    <string name="conn_error_title">Connection Error</string>
    <string name="conn_error_msg">Failed to start</string>
    <string name="conn_terminated_title">Connection Terminated</string>
    <string name="conn_terminated_msg">The connection was terminated.</string>
    <string name="error_code_prefix">Error code:</string>
    <string name="ip_hint">IP address of host PC</string>
    <string name="searching_pc">Searching for host PCs on your local network…\n\n
        Ensure Sunshine is running on your host PC or GameStream is enabled in the GeForce Experience SHIELD settings.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lost_connection">Lost connection to PC</string>
    <string name="title_details">Details</string>
    <string name="help">Help</string>
    <string name="delete_pc_msg">Are you sure you want to delete this PC?</string>
    <string name="slow_connection_msg">Slow connection to PC\nReduce your bitrate</string>
    <string name="poor_connection_msg">Poor connection to PC</string>
    <string name="perf_overlay_streamdetails">Video stream: %1$s %2$.2f FPS</string>
    <string name="perf_overlay_decoder">Decoder: %1$s</string>
    <string name="perf_overlay_incomingfps">Incoming frame rate from network: %1$.2f FPS</string>
    <string name="perf_overlay_renderingfps">Rendering frame rate: %1$.2f FPS</string>
    <string name="perf_overlay_hostprocessinglatency">Host processing latency min/max/average: %1$.1f/%2$.1f/%3$.1f ms</string>
    <string name="perf_overlay_netdrops">Frames dropped by your network connection: %1$.2f%%</string>
    <string name="perf_overlay_netlatency">Average network latency: %1$d ms (variance: %2$d ms)</string>
    <string name="perf_overlay_dectime">Average decoding time: %1$.2f ms</string>
    <string name="applist_connect_msg">Connecting to PC…</string>
    <string name="applist_menu_resume">Resume Session</string>
    <string name="applist_menu_quit">Quit Session</string>
    <string name="applist_menu_quit_and_start">Quit Current Game and Start</string>
    <string name="applist_menu_cancel">Cancel</string>
    <string name="applist_menu_details">View Details</string>
    <string name="applist_menu_scut">Create Shortcut</string>
    <string name="applist_menu_tv_channel">Add to Channel</string>
    <string name="applist_menu_hide_app">Hide App</string>
    <string name="applist_refresh_title">App List</string>
    <string name="applist_refresh_msg">Refreshing apps…</string>
    <string name="applist_refresh_error_title">Error</string>
    <string name="applist_refresh_error_msg">Failed to get app list</string>
    <string name="applist_quit_app">Quitting</string>
    <string name="xml_activity_axitest_1">Test keyboard keys</string>
    <string name="xml_activity_axitest_2">Test equipment vibrates</string>
    <string name="xml_activity_axitest_3">【On/Off】Vibration redirection</string>
    <string name="xml_activity_axitest_4">Refresh handle list</string>
    <string name="xml_activity_axitest_5">Test USB handle vibration</string>
    <string name="xml_activity_axitest_6">Test handle vibration</string>
    <string name="xml_activity_axitest_7">Amplitude strength</string>
    <string name="xml_activity_axitest_8">Stop testing</string>
    <string name="xml_activity_axitest_9">Android device information</string>
    <string name="xml_activity_axitest_10">Click the refresh button to refresh the controller information\nUSB controller test settings-check the overwrite USB driver</string>
    <string name="xml_dialog_game_menu_1">operate</string>
    <string name="xml_dialog_game_menu_2">keyboard</string>
    <string name="xml_dialog_game_menu_3">desktop</string>
    <string name="xml_dialog_game_menu_4">all windows</string>
    <string name="xml_dialog_game_menu_5">Function and operation</string>
    <string name="xml_dialog_game_menu_6">(Only effective for this stream)</string>
    <string name="xml_dialog_game_menu_7">Disconnect</string>
    <string name="xml_dialog_game_menu_8">Exit streaming</string>
    <string name="xml_dialog_game_menu_9">Rotate screen</string>
    <string name="xml_dialog_game_menu_10">Performance information</string>
    <string name="xml_dialog_game_menu_11">virtual controller</string>
    <string name="xml_dialog_game_menu_12">virtual keys</string>
    <string name="xml_dialog_game_menu_13">full keyboard</string>
    <string name="xml_dialog_game_menu_14">Screen zoom</string>
    <string name="xml_dialog_game_menu_15">monitor</string>
    <string name="xml_dialog_game_menu_16">microphone</string>
    <string name="xml_dialog_game_menu_17">HDR switch</string>
    <string name="xml_dialog_game_menu_18">Gamepad keyboard and mouse</string>
    <string name="xml_dialog_game_menu_19">Featured Features Moonlight Assisi</string>
    <string name="xml_dialog_game_menu_20">Mouse and touch</string>
    <string name="xml_dialog_game_menu_21">shortcut key</string>
    <string name="xml_dialog_game_menu_22">Virtual controller and buttons</string>
    <string name="xml_dialog_game_menu_23">show</string>
    <string name="xml_dialog_game_menu_24">peripherals</string>
    <string name="xml_dialog_game_menu_25">Touch sensitivity</string>
    <string name="xml_dialog_game_menu_26">Miscellaneous</string>
</resources>