<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootView"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/bt_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="onClick"
            android:text="@string/xml_activity_axitest_1" />

        <Button
            android:id="@+id/bt_vibrator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/xml_activity_axitest_2" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_vibrator_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/xml_activity_axitest_3" />

        <Button
            android:id="@+id/bt_update_gamepad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/xml_activity_axitest_4" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_vibrator_gamepad_usb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/xml_activity_axitest_5" />

        <Button
            android:id="@+id/bt_vibrator_gamepad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/xml_activity_axitest_6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_vibrator_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/xml_activity_axitest_7" />

        <Button
            android:id="@+id/bt_vibrator_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/xml_activity_axitest_8" />



    </LinearLayout>

    <TextView
        android:id="@+id/tx_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xml_activity_axitest_9" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tx_game_pad_info"
            android:text="@string/xml_activity_axitest_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>



</LinearLayout>